--- a/tourist-web/src/main/webapp/view/wap/destination.html
+++ b/tourist-web/src/main/webapp/view/wap/destination.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta name="viewport"
           content="width=device-width,minimum-scale=1,user-scalable=no,maximum-scale=1,initial-scale=1"/>
@@ -35,38 +35,34 @@
                     <div class="custom-tag-list-goods" style="overflow:hidden;padding-bottom:10px;">
                         <ul class="ulxy">
                             <li class="ulli">
-                                <div class="ullidiv"><a href="javascript: void(0);" class="link js-goods clearfix">
+                                <div class="ullidiv"><a href="destinationGoods.html"
+                                                        th:href="@{/wap/destinationGoods(type=1,value='西安')}"
+                                                        class="link js-goods clearfix">
                                     <div class="ullidd"> 西安</div>
                                 </a></div>
                             </li>
                             <li class="ulli">
-                                <div class="ullidiv"><a href="javascript: void(0);" class="link js-goods clearfix">
+                                <div class="ullidiv"><a href="destinationGoods.html" class="link js-goods clearfix">
+                                    <div class="ullidd"> 西安</div>
+                                </a></div>
+                            </li>
+                            <li class="ulli">
+                                <div class="ullidiv"><a href="destinationGoods.html" class="link js-goods clearfix">
+                                    <div class="ullidd"> 西安</div>
+                                </a></div>
+                            </li>
+                            <li class="ulli">
+                                <div class="ullidiv"><a href="destinationGoods.html" class="link js-goods clearfix">
                                     <div class="ullidd"> 南京</div>
                                 </a></div>
                             </li>
                             <li class="ulli">
-                                <div class="ullidiv"><a href="javascript: void(0);" class="link js-goods clearfix">
+                                <div class="ullidiv"><a href="destinationGoods.html" class="link js-goods clearfix">
                                     <div class="ullidd"> 成都</div>
                                 </a></div>
                             </li>
                         </ul>
-                        <ul class="ulxy">
-                            <li class="ulli">
-                                <div class="ullidiv"><a href="javascript: void(0);" class="link js-goods clearfix">
-                                    <div class="ullidd"> 深圳</div>
-                                </a></div>
-                            </li>
-                            <li class="ulli">
-                                <div class="ullidiv"><a href="javascript: void(0);" class="link js-goods clearfix">
-                                    <div class="ullidd"> 三亚</div>
-                                </a></div>
-                            </li>
-                            <li class="ulli">
-                                <div class="ullidiv"><a href="javascript: void(0);" class="link js-goods clearfix">
-                                    <div class="ullidd"> 重庆</div>
-                                </a></div>
-                            </li>
-                        </ul>
+
                     </div>
                 </div>
             </div>
