--- a/tourist-web/src/main/webapp/view/wap/destinationGoods.html
+++ b/tourist-web/src/main/webapp/view/wap/destinationGoods.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta name="viewport"
           content="width=device-width,minimum-scale=1,user-scalable=no,maximum-scale=1,initial-scale=1"/>
@@ -12,46 +12,15 @@
     <link rel="stylesheet" type="text/css"
           href="http://resali.huobanplus.com/cdn/jquery-weui/0.8.2/jquery-weui.min.css">
     <link rel="stylesheet" type="text/css" href="../../assets/css/weui.min-xzlx-diy.css">
-    <title>活动类型</title>
+    <title>目的地-商品列表</title>
 </head>
 
 <body>
 <div class="xzlx-hot">
     <!---->
-    <div class="app-edit swiper-container">
-        <div class="weui_navbar">
-            <div class="weui_navbar_item lxlx">
-                登山
-            </div>
-            <div class="weui_navbar_item lxlx">
-                徒步
-            </div>
-            <div class="weui_navbar_item lxlx">
-                自驾
-            </div>
-        </div>
-        <div class="weui_navbar">
-            <div class="weui_navbar_item lxlx ">
-                露营
-            </div>
-            <div class="weui_navbar_item lxlx">
-                潜水
-            </div>
-            <div class="weui_navbar_item lxlx">
-                滑雪
-            </div>
-        </div>
-        <div class="weui_navbar">
-            <div class="weui_navbar_item lxlx">
-                垂钓
-            </div>
-            <div class="weui_navbar_item lxlx">
-                冲浪
-            </div>
-            <div class="weui_navbar_item lxlx">
-                攀岩
-            </div>
-        </div>
+    <div class="app-edit ">
+        <a href="destinationTourist.html" class="nextJScroll"
+           th:href="@{/wap/destinationTourist(offset=0,type=${type},value=${value})}">&nbsp;</a>
     </div>
     <!--底部高度-->
     <p style="height: 80px; clear: both"></p>
@@ -73,9 +42,17 @@
 
     <!---->
 </div>
-</body>
-</html>
 <script src="http://resali.huobanplus.com/cdn/jquery/2.2.4/jquery.min.js"></script>
+<script src="../../assets/js/jquery.jscroll.min.js"></script>
 <script src="http://resali.huobanplus.com/cdn/jquery-weui/0.8.2/jquery-weui.min.js"></script>
 <script type="text/javascript" src="js/w/swiper.animate1.0.2.min.js"></script>
 <script src="http://resali.huobanplus.com/cdn/jquery-weui/0.8.2/swiper.min.js"></script>
+<script>
+    $('.app-edit').jscroll({
+        debug: true,
+        loadingHtml: '<div class="weui-infinite-scroll"><div class="infinite-preloader"></div>滑动加载更多</div>'
+    });
+</script>
+</body>
+
+</html>
