--- a/tourist-web/src/main/webapp/view/wap/index.html
+++ b/tourist-web/src/main/webapp/view/wap/index.html
@@ -50,7 +50,7 @@
         <!--分类图标-->
         <div>
             <div class="weui_navbar">
-                <a href="destination.html" class="weui_tabbar_item">
+                <a href="destination.html" th:href="@{/wap/destinationList}" class="weui_tabbar_item">
                     <div class="weui_tabbar_icon"><img src="../../assets/img/mdd.png" alt=""></div>
                     <p class="weui_tabbar_label">目的地</p>
                 </a>
@@ -68,7 +68,7 @@
                 </a>
             </div>
             <div class="weui_navbar" style="padding-bottom:10px;">
-                <a href="activityType.html" class="weui_tabbar_item">
+                <a href="activityTypeList.html" class="weui_tabbar_item">
                     <div class="weui_tabbar_icon"><img src="../../assets/img/hdlx.png" alt=""></div>
                     <p class="weui_tabbar_label">活动类型</p>
                 </a>
@@ -99,13 +99,14 @@
         <div class="weui_tab_bd" style="padding-bottom:0px">
             <div class="cont-zhbox" th:each="good:${recommendGoods}">
                 <!--/*@thymesVar id="good" type="com.huotu.tourist.entity.TouristGood"*/-->
-                <div class="cont-zhbox-t"><a href="touristGoodInfo.html" th:href="@{/wap/goodInfo(id=${good.id})}"
-                                             class="bz">
-                    <p class="cont-zhbox-img">
-                        <img src="../../assets/img/swiper-2.jpg" res:src="${good.touristImgUri}">
-                    </p>
-                    <p class="cont-zhbox-nav"></p>
-                </a>
+                <div class="cont-zhbox-t">
+                    <a href="touristGoodInfo.html" th:href="@{/wap/goodInfo(id=${good.id})}"
+                       class="bz">
+                        <p class="cont-zhbox-img">
+                            <img src="../../assets/img/swiper-2.jpg" res:src="${good.touristImgUri}">
+                        </p>
+                        <p class="cont-zhbox-nav"></p>
+                    </a>
                     <div class="zhbox">
                         <div class="zh-wz">
                             <div class="zh-wz-x">
@@ -162,7 +163,7 @@
 
 
         <div class="weui_cells weui_cells_access">
-            <a class="weui_cell" href="activityType.html">
+            <a class="weui_cell" href="activityTypeList.html">
                 <div class="weui_cell_bd weui_cell_primary">
                     <p>活动类型</p>
                 </div>
@@ -173,30 +174,32 @@
         <ul class="lxxznnn" th:each="activityType:${activityTypes}">
             <!--/*@thymesVar id="activityType" type="com.huotu.tourist.entity.ActivityType"*/-->
             <li class="pj">
-                <a href="javascript:alert('todo');"
+                <a href="activityTypeGoods.html"
                    th:href="@{/wap/activityTypeGoods(activityTypeId=${activityType.id})}"
                    th:text="${activityType.activityName}">
                     登山登山
                 </a>
             </li>
-            <li class="pj"><a> 徒步步</a></li>
-            <li class="pj"><a> 自驾</a></li>
-            <li class="pj"><a> 登山</a></li>
-            <li class="pj"><a> 徒步步步</a></li>
-            <li class="pj"><a> 自驾</a></li>
-            <li class="pj"><a> 登山</a></li>
-            <li class="pj"><a> 徒步</a></li>
-            <li class="pj"><a> 自驾</a></li>
+            <li class="pj"><a href="activityTypeGoods.html"> 徒步步</a></li>
+            <li class="pj"><a href="activityTypeGoods.html"> 自驾</a></li>
+            <li class="pj"><a href="activityTypeGoods.html"> 登山</a></li>
+            <li class="pj"><a href="activityTypeGoods.html"> 徒步步步</a></li>
+            <li class="pj"><a href="activityTypeGoods.html"> 自驾</a></li>
+            <li class="pj"><a href="activityTypeGoods.html"> 登山</a></li>
+            <li class="pj"><a href="activityTypeGoods.html"> 徒步</a></li>
+            <li class="pj"><a href="activityTypeGoods.html"> 自驾</a></li>
         </ul>
         <p style="clear: both"></p>
 
         <!--最新路线-->
-        <div class="weui_cells weui_cells_access" style="margin-top:8px;"><a class="weui_cell" href="javascript:;">
-            <div class="weui_cell_bd weui_cell_primary">
-                <p>最新路线</p>
-            </div>
-            <div class="weui_cell_ft"></div>
-        </a></div>
+        <div class="weui_cells weui_cells_access" style="margin-top:8px;">
+            <a class="weui_cell" href="javascript:;">
+                <div class="weui_cell_bd weui_cell_primary">
+                    <p>最新路线</p>
+                </div>
+                <div class="weui_cell_ft"></div>
+            </a>
+        </div>
         <div id="touristsRegion">
             <a href="newTourist.html" class="nextJScroll" th:href="@{/wap/newTouristList(offset=0)}">&nbsp;</a>
         </div>
@@ -204,7 +207,7 @@
         <p style="height: 80px; clear: both"></p>
         <!--底部导航-->
         <div class="weui_navbar daohangs">
-            <a href="index.html" class="weui_navbar_item weui_bar_item_on">
+            <a href="index.html" th:href="@{/wap/}" class="weui_navbar_item weui_bar_item_on">
                 <p class="kimg dhshouyeicon"></p>
                 <p>首页</p>
             </a>
