推荐热点线路列表添加

--- a/tourist-web/src/main/webapp/view/wap/index.html
+++ b/tourist-web/src/main/webapp/view/wap/index.html
@@ -89,7 +89,7 @@
 
         <!--热门路线-->
         <div class="weui_cells weui_cells_access">
-            <a class="weui_cell" href="javascript:alert('跳转至热门线路列表页');">
+            <a class="weui_cell" href="recommendGoods.html" th:href="@{/wap/recommendGoods}">
                 <div class="weui_cell_bd weui_cell_primary">
                     <p>热门路线</p>
                 </div>
