订单列表链接

--- a/tourist-web/src/main/webapp/view/wap/newOrder.html
+++ b/tourist-web/src/main/webapp/view/wap/newOrder.html
@@ -17,7 +17,7 @@
     </div>
     <div class="ts">
         <div class="dx">
-            <a href="">
+            <a href="orderInfo.html">
                 <div class="pic"><img res:src="${order.touristGood.touristImgUri}" src="images/imgsss.png"></div>
                 <div class="con">
                     <p style="color:#000; margin-bottom:2px" th:text="${order.touristGood.touristName}">【朝圣之旅】西藏云南8日轻装游，赶快报名！</p>
@@ -51,7 +51,7 @@
             class="weui_btn weui_btn_mini weui_btn_warn f12">
             确认完成
         </a>
-        <a href="" class="weui_btn weui_btn_mini weui_btn_primary f12">
+        <a href="orderInfo.html" class="weui_btn weui_btn_mini weui_btn_primary f12">
             查看详情
         </a>
     </div>
