--- a/tourist-web/src/main/webapp/view/wap/allOrder.html
+++ b/tourist-web/src/main/webapp/view/wap/allOrder.html
@@ -47,9 +47,8 @@
                 <div id="allList" class="weui_tab_bd_item">
                     <div class="xiaofeijilv">
                         <ul class="touristsRegion">
-
                             <a href="newOrder.html" class="nextJScroll"
-                               th:href="@{/wap/newBuyerOrderList(states=${states},buyerId=${buyerId})}">加载</a>
+                               th:href="@{/wap/newBuyerOrderList(states=${states},buyerId=${buyerId})}">&nbsp;</a>
                         </ul>
                     </div>
                 </div>
@@ -64,8 +63,9 @@
     <p style="height: 80px; clear: both"></p>
     <!--底部导航-->
     <!--底部导航-->
-    <div class="weui_navbar daohangs"  th:replace="view/wap/bottom.html :: bottom">
-        <a href="index.html" class="weui_navbar_item weui_bar_item_on">
+    <!--<div class="weui_navbar daohangs"  th:replace="view/wap/bottom.html :: bottom">-->
+    <div class="weui_navbar daohangs">
+        <a href="index.html" class="weui_navbar_item">
             <p class="kimg dhshouyeicon"></p>
             <p>首页</p>
         </a>
@@ -73,7 +73,7 @@
             <p class="kimg dhsousuoicon"></p>
             <p>搜索</p>
         </a>
-        <a href="my.html" class="weui_navbar_item">
+        <a href="my.html" class="weui_navbar_item weui_bar_item_on">
             <p class="kimg dhwodeicon"></p>
             <p> 我的</p>
         </a>
@@ -94,72 +94,12 @@
 
     var showOrderList=/*[[@{/wap/showAllOrders}]]*/"allOrder.html";
 
-    /*]]>*/
-
-</script>
-<script src="../../assets/js/wap/allOrder.js"></script>
-<script type="text/javascript" th:inline="javascript">
-    /*<![CDATA[*/
     var modifyOrderStateUrl=/*[[@{/base/modifyOrderState}]]*/'../../mock/supplier/orderDetails.json';
 
-
-    var affirmOrder=function(obj,orderId){
-        $.confirm("确定完成订单吗", function() {
-            //点击确认后的回调函数
-            modifyOrderStateAjax(obj,orderId,3);
-        });
-    };
-    var cancelOrder=function(obj,orderId){
-        $.confirm("确定取消订单吗", function() {
-            //点击确认后的回调函数
-            modifyOrderStateAjax(obj,orderId,6);
-        });
-    };
-    var  refundOrder=function(obj,orderId){
-        var text=$(obj).text();
-        $.confirm("确定"+text+"吗", function() {
-            var stateCode;
-            if(text=="申请退款"){
-                stateCode=4;
-            }else {
-                stateCode=1;
-            }
-            modifyOrderStateAjax(obj,orderId,stateCode);
-        });
-    };
-
-    var modifyOrderStateAjax=function(obj,orderId,stateCode){
-        $.ajax({
-            type:'POST',
-            url: modifyOrderStateUrl,
-            dataType: 'text',
-            data: {id:orderId,orderState:stateCode},
-            success:function(result){
-                $.alert("状态修改成功!");
-                modifyOrderHtml(obj,stateCode);
-            },
-            error:function(e){
-                $.alert("修改失败!");
-            }
-        });
-
-    };
-
-    var modifyOrderHtml=function(obj,stateCode){
-        switch (stateCode){
-            case 1:
-                $(obj).text("申请退款");
-                break;
-            case 4:
-                $(obj).text("取消退款");
-                break;
-            default:
-                $(obj).hide();
-        }
-    };
-
     /*]]>*/
+
 </script>
 
+<script src="../../assets/js/wap/allOrder.js"></script>
 </body>
 </html>
