--- a/tourist-web/src/main/webapp/view/wap/orderInfo.html
+++ b/tourist-web/src/main/webapp/view/wap/orderInfo.html
@@ -1,5 +1,14 @@
 <!doctype html>
-<html lang="en">
+<!--
+  ~ 版权所有:杭州火图科技有限公司
+  ~ 地址:浙江省杭州市滨江区西兴街道阡陌路智慧E谷B幢4楼
+  ~
+  ~ (c) Copyright Hangzhou Hot Technology Co., Ltd.
+  ~ Floor 4,Block B,Wisdom E Valley,Qianmo Road,Binjiang District
+  ~ 2013-2016. All rights reserved.
+  -->
+
+<html xmlns:th="http://www.thymeleaf.org" xmlns:res="http://resource.jiangcai.me" lang="en">
 <head>
     <meta name="viewport"
           content="width=device-width,minimum-scale=1,user-scalable=no,maximum-scale=1,initial-scale=1"/>
@@ -12,8 +21,13 @@
     <link rel="stylesheet" type="text/css"
           href="http://resali.huobanplus.com/cdn/jquery-weui/0.8.2/jquery-weui.min.css">
     <link rel="stylesheet" type="text/css" href="../../assets/css/weui.min-xzlx-diy.css">
-    <title>全部采购单</title>
+    <title>采购单</title>
 </head>
+
+<!--/*@thymesVar id="order" type="com.huotu.tourist.entity.TouristOrder"*/-->
+<!--/*@thymesVar id="route" type="com.huotu.tourist.entity.TouristRoute"*/-->
+<!--/*@thymesVar id="orderStates" type="java.util.ArrayList<com.huotu.tourist.common.OrderStateEnum>"*/-->
+<!--/*@thymesVar id="travelers" type="java.util.ArrayList<com.huotu.tourist.entity.Traveler>"*/-->
 
 <body class="bac">
 <div class="xzlx-hot">
@@ -22,35 +36,42 @@
         <div class="xiaofeijilv">
             <ul>
                 <li class="t">
-                    <div class="DDH"><span>订单编号：201604943218493</span>
+                    <div class="DDH">
+                        <span th:text="'订单编号：'+${order.orderNo}">订单编号：201604943218493</span>
                         <p style="clear:both"></p>
                     </div>
                     <div class="ts">
-                        <div class="dx"><a href="">
-                            <div class="pic"><img src="../../assets/img/imgsss.png"></div>
-                            <div class="con">
-                                <p style="color:#000; margin-bottom:2px">【朝圣之旅】西藏云南8日轻装游，赶快报名！</p>
-                                <p style="color:#000;">x1</p>
-                            </div>
-                            <p style="clear:both"></p>
-                        </a></div>
+                        <div class="dx">
+                            <a href="">
+                                <div class="pic">
+                                    <img res:src="${order.touristGood.touristImgUri}" src="../../assets/img/imgsss.png">
+                                </div>
+                                <div class="con">
+                                    <p style="color:#000; margin-bottom:2px" th:text="${order.touristGood.touristName}">【朝圣之旅】西藏云南8日轻装游，赶快报名！</p>
+                                    <p style="color:#000;">x1</p>
+                                </div>
+                                <p style="clear:both"></p>
+                            </a>
+                        </div>
                     </div>
                     <div style="font-size:12px; padding:6px 10px;">
-                        <p style="float:right">共<span>3</span>人,总计：￥<span>199.00</span></p>
-                        <p style="float:left;color:#999">2015-10-10 16:15</p>
+                        <p style="float:right">共<span th:text="${order.travelers.size()}">3</span>人,总计：￥
+                            <span th:text="${order.orderMoney}">199.00</span></p>
+                        <p style="float:left;color:#999" th:text="${route.fromDate}">2015-10-10 16:15</p>
                         <p style="clear:both"></p>
                     </div>
                 </li>
             </ul>
         </div>
         <div class="weui_cells_title"> 人员信息</div>
-        <div class="weui_panel_bd">
-            <div class="weui_media_box weui_media_text massgea">
-                <h4 class="weui_media_title">里里<i style="color: #808080; font-size: 12px; font-style: normal">&nbsp;/&nbsp;女</i>
+        <div th:remove="all-but-first" class="weui_panel_bd">
+            <div th:each="t:${travelers}" class="weui_media_box weui_media_text massgea">
+                <h4 class="weui_media_title" th:text="${t.name}">里里
+                    <i style="color: #808080; font-size: 12px; font-style: normal" th:text="'&nbsp;/&nbsp;'+${t.sex.value}">&nbsp;/&nbsp;女</i>
                 </h4>
-                <p class="weui_media_desc ztdx">年龄:23</p>
-                <p class="weui_media_desc ztdx">联系电话:1563232323</p>
-                <p class="weui_media_desc ztdx">身份证号:332325******256569</p>
+                <p class="weui_media_desc ztdx" th:text="'年龄:'+${t.age}">年龄:23</p>
+                <p class="weui_media_desc ztdx" th:text="'联系电话:'+${t.telPhone}">联系电话:1563232323</p>
+                <p class="weui_media_desc ztdx" th:text="'身份证号:'+${t.IDNo}">身份证号:332325******256569</p>
             </div>
             <div class="weui_media_box weui_media_text massgea">
                 <h4 class="weui_media_title">等等<i style="color: #808080; font-size: 12px; font-style: normal">&nbsp;/&nbsp;女</i>
@@ -68,17 +89,19 @@
             </div>
         </div>
         <div class="weui_cells_title"> 备注</div>
-        <div style="background-color: #fff; font-size:14px; color: #333; padding: 15px;">
+        <div style="background-color: #fff; font-size:14px; color: #333; padding: 15px;" th:text="${order.remarks}">
             西藏云南8日轻装游，赶快报名！西藏云南8日轻装游，赶快报名！西藏云南8日轻装游，赶快报名！西藏云南8日轻装游，赶快报名！西藏云南8日轻装游，赶快报名！
         </div>
-        <div class="weui_cells weui_cells_access" style="margin-top: 10px"><a class="weui_cell" href="javascript:;">
+        <div class="weui_cells weui_cells_access" style="margin-top: 10px">
+            <a class="weui_cell" href="javascript:;">
             <div class="weui_media_box weui_media_text" style="padding: 0px; width: 100%">
-                <div class="weui_media_hd imgleft"><img class="weui_media_appmsg_thumb"
+                <div class="weui_media_hd imgleft">
+                    <img class="weui_media_appmsg_thumb" th:src="${order.touristGood.touristSupplier.businessLicenseUri}"
                                                         src="../../assets/img/imgsss.png" alt=""></div>
-                <h4 class="weui_media_title">乌鲁木齐俱乐部</h4>
+                <h4 class="weui_media_title" th:text="${order.touristGood.touristSupplier.supplierName}">乌鲁木齐俱乐部</h4>
                 <ul class="weui_media_info" style="margin-top: 4px;line-height: 1.3em;">
-                    <li class="weui_media_info_meta">地接人：王剑南</li>
-                    <li class="weui_media_info_meta">联系电话：0571-13205713331</li>
+                    <li class="weui_media_info_meta" th:text="'第接人：'+${order.touristGood.receptionPerson}">地接人：王剑南</li>
+                    <li class="weui_media_info_meta" th:text="'联系电话：'+${order.touristGood.receptionTelephone}">联系电话：0571-13205713331</li>
                 </ul>
             </div>
             <span class="weui_cell_ft"></span> </a></div>
